[package]
name = "rewrk"
version = "0.3.2"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>", "Programatik <programatik29@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "2"
colored = "2"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["runtime", "client", "http1", "http2"] }
pin-project-lite = "0.2"
regex = "1"
rand = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
tower = { version = "0.4", features = ["util"] }

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"

[workspace]
members = [
    "rewrk-core"
]
